fix spacing and 3rd section position and size

--- a/css/module2.css
+++ b/css/module2.css
@@ -1,6 +1,9 @@
-* { 
-  box-sizing: border-box; }
-
+* {
+	box-sizing: border-box;
+}
+html {
+	display: block;
+}
 body {
 	color : blue;
 	font-family:  serif, sans-serif;
@@ -21,9 +24,8 @@ p {
  	border: none;
  	clear: right;
  	background-color: grey;
- 	width:90%;
- 	margin-left:auto;
- 	margin-right:auto;
+ 	padding:5px 5px 5px 5px;
+ 	margin-bottom: 10px;
  }
 
 @media(min-width: 768px) and (max-width: 991px) {
@@ -99,11 +101,11 @@ div {
 }
 
 .content {
-	width:90%;
-	padding: 0px 0px 0px 5px;
+	clear:right;
+	border: 1px solid black;
+	margin:10px;
+	padding: 0px 0px 0px 8px;
 	background-color: grey;
-	margin-left:auto;
-	margin-right:auto;
 	margin-bottom: 20px;
 	position: relative;
 
@@ -115,14 +117,13 @@ div {
 	float: right;
 	border : 1px solid black;
 	text-align: center;
-	font-family:  serif, sans-serif;
 	width:30%;
 	height:20px;
 }
 
 #chicken {
 	color : purple;
-background-color: orange;
+    background-color: orange;
 }
 #beef {
 
